<resources>
    <string name="app_name">Everyday Goals</string>
    <string name="action_settings">Settings</string>
    <string name="add_item">Add Item</string>
    <string name="enter_item">Enter your Goal</string>
    <string name="enter_itemname">Task Name</string>
    <string name="enter_quantity">Time to be spent</string>
    <string name="enter_item_color">Learning Experience</string>
    <string name="enter_item_size">Completion(0-10)</string>
    <string name="save">SAVE</string>
    <string name="save_button">SAVE</string>
    <string name="sure">Are you sure?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="edit">Edit Text</string>
    <string name="edit_text">Edit Goal</string>
    <string name="update_text">Update</string>
    <string name="task_completion">Task Completion</string>
    <string name="learning_experience">Learning Experience</string>
    <string name="date_added">Date added</string>
    <string name="time_to_spend">Time to Spend</string>
    <string name="goal">Goal</string>
</resources>
