<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_id"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:padding="24dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/title_tt"
                android:layout_centerHorizontal="true"
                android:text="@string/enter_item"
                android:textStyle="italic|bold"
                android:textSize="18sp" />
            <EditText
                android:id="@+id/baby_item"
                android:hint="@string/enter_itemname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/title_tt"
                />
            <EditText
                android:id="@+id/item_quantity"
                android:inputType="number"
                android:hint="@string/enter_quantity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/baby_item"
                />
            <EditText
                android:id="@+id/item_color"
                android:hint="@string/enter_item_color"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/item_quantity"
                />
            <EditText
                android:id="@+id/item_size"
                android:inputType="number"
                android:hint="@string/enter_item_size"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/item_color"
                />
            <Button
                android:layout_marginEnd="5dp"
                android:background="@color/colorAccent"
                android:id="@+id/save_button"
                android:layout_below="@+id/item_size"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                android:textStyle="bold"
                android:text="@string/save_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </RelativeLayout>


    </android.support.v7.widget.CardView>
</LinearLayout>