<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="5dp">

    <android.support.v7.widget.CardView
        android:id="@+id/cardview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <!--android:padding="15dp">-->

        <RelativeLayout
            android:padding="20dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/item_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/goal"
                android:textSize="18sp"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/item_quantity"
                android:layout_below="@id/item_name"
                android:padding="4dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/time_to_spend"
                android:textSize="18sp"
                android:textStyle="italic"/>
            <TextView
                android:id="@+id/item_date"
                android:layout_below="@id/item_quantity"
                android:padding="4dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date_added"
                android:textSize="18sp"
                android:textStyle="italic"/>
            <TextView
                android:id="@+id/item_color"
                android:layout_below="@id/item_date"
                android:padding="4dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/learning_experience"
                android:textSize="18sp"
                android:textStyle="italic"/>
            <TextView
                android:id="@+id/item_size"
                android:layout_below="@id/item_color"
                android:padding="4dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/task_completion"
                android:textSize="18sp"
                android:textStyle="italic"
                tools:ignore="UnknownId" />

            <TableRow
                android:layout_alignParentEnd="true"
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/item_size"
                android:layout_marginTop="15dp"
                tools:ignore="UnknownId">

                <Button
                    android:id="@+id/editbutton"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginEnd="15dp"
                    android:background="@android:drawable/ic_menu_edit"
                    />
                <Button
                    android:id="@+id/deletebutton"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginEnd="15dp"
                    android:background="@android:drawable/ic_delete"
                    />



            </TableRow>
        </RelativeLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>