<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:padding="23dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/text_alert"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:padding="6dp"
                android:text="@string/sure"
                android:textColor="#08000A"
                android:textSize="18sp" />

            <Button
                android:id="@+id/no_conf"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/text_alert"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="18dp"
                android:layout_marginEnd="26dp"
                android:background="@color/colorAccent"
                android:text="@string/no"
                android:textColor="@android:color/white" />

            <Button
                android:id="@+id/yes_conf"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/text_alert"
                android:layout_alignParentStart="true"
                android:layout_marginStart="26dp"
                android:layout_marginTop="18dp"
                android:background="@color/colorAccent"
                android:text="@string/yes"
                android:textColor="@android:color/white" />

        </RelativeLayout>
    </android.support.v7.widget.CardView>

</LinearLayout>